[gd_scene format=3 uid="uid://drcpcwf6f8sgw"]

[ext_resource type="Script" uid="uid://n03or6xwphdg" path="res://scripts/Valk/thought_ui.gd" id="1_suoro"]

[node name="ThoughtUI" type="Panel" unique_id=1039864838]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.42900002
anchor_right = 0.5
anchor_bottom = 0.42900002
offset_left = -82.0
offset_top = -58.992004
offset_right = 98.0
offset_bottom = 80.007996
mouse_filter = 2
mouse_behavior_recursive = 1
script = ExtResource("1_suoro")

[node name="TitleText" type="RichTextLabel" parent="." unique_id=1259466619]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
text = "Meow"
scroll_active = false

[node name="DescText" type="RichTextLabel" parent="." unique_id=733876173]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 21.0
text = "Meow Meow"
scroll_active = false
